# DefaultCppProject

./: CMakeLists.txt  FULL_clean.sh  README  README.md  build.sh
src/: main.cpp
